--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
+*{
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background: url("images/depositphotos_30180155-stock-illustration-abstract-beige-background.jpg") center/cover ;
+}
+header {
+    text-align: center;
+    padding: 15px 15px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  max-width: 1140px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
+}
+.col-5 {
+ width: 20%;
+  padding: 15px;
+}
+.photo{
+    width: 100%;
+}
+.button {
+    border: 1px solid black;
+    padding: 5px 15px;
+}
+.search-input {
+    padding: 5px 15px;
+    margin-right: 10px;
 }
